# server/routes/user.js
@@ -17,7 +17,8 @@ router.post(
   userValidations.postSignupValidation,
   userControllers.postSignup
 );
-
+router.get('/confirm-email', isAuth, userControllers.getConfirmEmail);
+router.get('/verify/:verifyToken', userControllers.getVerifyEmail);
 router.post('/login', userControllers.postLogin);
 router.post('/logout', isAuth, userControllers.postLogOut);
 
